# glfw-game-engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  GGE.dia  LICENSE.md  README.md  index.html  params.json
docs/html/: annotated.html  application_8cpp.html  application_8h.html  application_8h_source.html  camera_8cpp.html  camera_8h.html  camera_8h_source.html  class_g_g_e_1_1_ambient_light-members.html  class_g_g_e_1_1_ambient_light.html  class_g_g_e_1_1_application-members.html  class_g_g_e_1_1_application.html  class_g_g_e_1_1_camera-members.html  class_g_g_e_1_1_camera.html  class_g_g_e_1_1_entity-members.html  class_g_g_e_1_1_entity.html  class_g_g_e_1_1_light-members.html  class_g_g_e_1_1_light.html  class_g_g_e_1_1_material-members.html  class_g_g_e_1_1_material.html  class_g_g_e_1_1_mesh-members.html  class_g_g_e_1_1_mesh.html  class_g_g_e_1_1_point_light-members.html  class_g_g_e_1_1_point_light.html  class_g_g_e_1_1_program-members.html  class_g_g_e_1_1_program.html  class_g_g_e_1_1_shader-members.html  class_g_g_e_1_1_shader.html  class_g_g_e_1_1_shape-members.html  class_g_g_e_1_1_shape.html  class_g_g_e_1_1_spot_light-members.html  class_g_g_e_1_1_spot_light.html  classes.html  (+64 more)
include/: application.h  camera.h  color.h  entity.h  geometry.h  light.h  material.h  mesh.h  model.h  program.h  shader.h  shape.h  texture.h  triangle.h  window.h
src/: application.cpp  camera.cpp  entity.cpp  geometry.cpp  light.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  program.cpp  shader.cpp  shape.cpp  texture.cpp  triangle.cpp  window.cpp
(+160 files in other folders)
